--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <h4>Welke wijzingen gebeuren er in de DOM-tree als je op een gesloten section klikt?</h4>
     <p>In de DOM-Tree zelf zijn er geen wijzigingen.</p>
 </br>
-<p><a href="contact/index.html">Oefening contact</a></p>
-<p><a href="opleidingsaanbod/index.html">Oefening opleidingsaanbod</a></p>
-<p><a href="homepage/index.html">Oefening homepage</a></p>
+<p><a href="labo3/contact/index.html">Oefening contact</a></p>
+<p><a href="labo3/opleidingsaanbod/index.html">Oefening opleidingsaanbod</a></p>
+<p><a href="labo3/homepage/index.html">Oefening homepage</a></p>
 </body>
 </html>
