--- a/index.html
+++ b/index.html
@@ -2,39 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Oefening 1-3</title>
+    <title>Web Development</title>
 </head>
 <body>
-<h1>Labo 3 - Nathan Thio</h1>
-<h2>Oefening 1</h2>
-    <p>De lijntjes duiden een onderliggende tag aan binnen die tag</p>
-    <h4>Waarmee komen de blokjes overeen?</h4>
-    <ul>
-        <li>Document: Staat voor het volledige document</li>
-        <li>html: Alle html-code</li>
-        <li>Head: de meta-tag en title-tag
-            <ul>
-                <li>Meta: charset, id, name en data-extension-version met elk hun waarden</li>
-                <li>Title: De titel van de pagina, helemaal bovenaan te zien in browser bij verschillende tabbladen</li>
-            </ul>
-        </li>
-        <li>Body: Alle html-code die op de pagina zelf terecht komt
-            <ul>
-                <li>H1 t.e.m. H6: "Heading (H1), Heading (H2),..." (Titels)</li>
-                <li>p: paragraaf met daarin een a-tag</li>
-                <li>a: een link naar "http://www.htmldog.com/examples/"</li>
-                <li>img: een afbeelding waar de link op staat. Het pad naar de afbeelding wordt aangeduid met src="http://www.htmldog.com/badge1.gif"</li>
-            </ul>
-        </li>
-    </ul>
-<h2>Oefening 3</h2>
-    <h4>Uit welke elementen bestaat elke accordion section?</h4>
-    <p>Die bestaat uit een h3-tag en een div-tag met daarin een paragraaf met tekst</p>
-    <h4>Welke wijzingen gebeuren er in de DOM-tree als je op een gesloten section klikt?</h4>
-    <p>In de DOM-Tree zelf zijn er geen wijzigingen.</p>
-</br>
-<p><a href="labo3/contact/index.html">Oefening contact</a></p>
-<p><a href="labo3/opleidingsaanbod/index.html">Oefening opleidingsaanbod</a></p>
-<p><a href="labo3/homepage/index.html">Oefening homepage</a></p>
+<h1>Web Development</h1>
+<h2><a href="labo2/index.html">Labo 2</a></h2>
+<h2><a href="labo3/index.html">Labo 3</a></h2>
 </body>
 </html>
