--- a/labo3/contact/index.html
+++ b/labo3/contact/index.html
@@ -7,11 +7,21 @@
         td {
             padding: 5px;
         }
+        table, td, tr, th {
+            border: 1px solid black;
+        }
+        #kortrijk {
+            width: 80px;
+        }
+        #infoKortrijk {
+            width: 100px;
+        }
     </style>
 </head>
 <body>
     <h2>How do you reach us?</h2>
-<table border="1">
+<table>
+    <thead>
     <tr>
         <th colspan="2">Campus</th>
         <th>Study Areas</th>
@@ -20,10 +30,12 @@
         <th>Email</th>
         <th>Website</th>
     </tr>
+    </thead>
+    <tbody>
     <tr>
-        <td rowspan="4" width="80">Kortrijk</td>
-        <td rowspan="4">Doorniksesteenweg </br> 145 </br> 8500 Kortrijk</td>
-        <td width="100px">Commercial sciences, Business Management and Informatics</td>
+        <td rowspan="4" id="kortrijk">Kortrijk</td>
+        <td rowspan="4">Doorniksesteenweg <br> 145 <br> 8500 Kortrijk</td>
+        <td id="infoKortrijk">Commercial sciences, Business Management and Informatics</td>
         <td>+32 56 26 41 80</td>
         <td>+32 56 21 58 02</td>
         <td><a href="">hwb.kortrijk@vives.be</a></td>
@@ -37,7 +49,7 @@
         <td><a href="">Gezondheidszorg</a></td>
     </tr>
     <tr>
-        <td>Applied </br>Social Studies</td>
+        <td>Applied <br>Social Studies</td>
         <td>+32 51 26 41 50</td>
         <td>+32 51 21 58 03</td>
         <td><a href="">saw.kortrijk@vives.be</a></td>
@@ -52,7 +64,7 @@
     </tr>
     <tr>
         <td>Roeselare</td>
-        <td>Wilgenstraat 32 </br> 8800 Roeselare</td>
+        <td>Wilgenstraat 32 <br> 8800 Roeselare</td>
         <td>Biotechnology</td>
         <td>+32 51 23 23 30</td>
         <td>+32 51 22 82 58</td>
@@ -61,13 +73,14 @@
     </tr>
     <tr>
         <td>Torhout</td>
-        <td>Sint-Jozefstraat 1 </br> 8820 Torhout</td>
+        <td>Sint-Jozefstraat 1 <br> 8820 Torhout</td>
         <td>Education</td>
         <td>+32 50 23 10 30</td>
         <td>+32 50 23 10 31</td>
         <td><a href="">ond.torhout@vives.be</a></td>
         <td><a href="">Onderwijs</a></td>
     </tr>
+    </tbody>
 </table>
 </body>
 </html>
