--- a/labo3/homepage/index.html
+++ b/labo3/homepage/index.html
@@ -16,7 +16,7 @@
         }
         table {
             border-collapse: collapse;
-            border-width: 2px;
+            border: 1px solid black;
         }
         h2 {
             font-style: italic;
@@ -34,7 +34,7 @@
 <h1>Nathan Thio</h1>
 <hr>
 <h2>Persoonlijke informatie</h2>
-<table border="1">
+<table>
     <tr>
         <th>naam</th>
         <th>adres</th>
@@ -44,34 +44,28 @@
     </tr>
     <tr>
         <td>Nathan Thio</td>
-        <td>Lageweg 162 </br>8930 Menen</td>
+        <td>Lageweg 162 <br>8930 Menen</td>
         <td>0485 34 86 90</td>
         <td><a href="">Nathan.thio2004@gmail.com</a></td>
-        <td><img src="images/mannetje.jpg"></td>
+        <td><img src="images/mannetje.jpg" alt="profielFoto"></td>
     </tr>
 </table>
 <hr>
 <h2>Hobby's</h2>
-<ol>
-    <li>Fitness</li>
-    <ul>
-        <li><a href="https://www.basic-fit.com/nl-be/home" target="blank">Basicfit</a></li>
-    </ul>
-    <li>Fietsen</li>
-    <ul>
-        <li><a href="https://www.bikerepublic.be/" target="blank">BikeRepublic</a></li>
-    </ul>
-    <li>Gamen</li>
-    <ul>
-        <li><a href="https://www.playstation.com" target="blank">Playstation</a></li>
-    </ul>
-</ol>
+<dl>
+    <dt>Fitness</dt>
+    <dd><a href="https://www.basic-fit.com/nl-be/home" target="blank">Basicfit</a></dd>
+    <dt>Fietsen</dt>
+    <dd><a href="https://www.bikerepublic.be/" target="blank">BikeRepublic</a></dd>
+    <dt>Gamen</dt>
+    <dd><a href="https://www.playstation.com" target="blank">Playstation</a></dd>
+</dl>
 <hr>
 <h2>Interesses</h2>
-<img src="images/ELO.jpg" class="foto">
-<p class="interesse"><strong>Favoriete band:</strong> Electric Light Orchestra</br></br><strong>Favoriet liedje:</strong> <a href="https://www.youtube.com/watch?v=wuJIqmha2Hk" target="blank">Mr. Blue Sky</a></p>
-</br>
-<img src="images/pacificRim.jpg" class="foto">
+<img src="images/ELO.jpg" alt="foto band" class="foto">
+<p class="interesse"><strong>Favoriete band:</strong> Electric Light Orchestra<br><br><strong>Favoriet liedje:</strong> <a href="https://www.youtube.com/watch?v=wuJIqmha2Hk" target="blank">Mr. Blue Sky</a></p>
+<br>
+<img src="images/pacificRim.jpg" alt="foto film" class="foto">
 <p class="interesse"><strong>Favoriete film: </strong>Pacific Rim
 <a href="https://www.youtube.com/watch?v=5guMumPFBag">(Trailer)</a></p>
 </body>
