--- a/labo3/opleidingsaanbod/index.html
+++ b/labo3/opleidingsaanbod/index.html
@@ -15,44 +15,45 @@
     <li>Onderwijs</li>
     <li>Sociaal-agogisch werk</li>
 </ol>
-<p>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele</br>
+<p>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele<br>
     bachelor diploma’s behalen:</p>
+
 <ul>
     <li>Toegepaste Informatica</li>
-        <ol>
+        <li><ol>
             <li>Applicatie-ontwikkeling</li>
-                <ul>
+                <li><ul>
                     <li>Apps en gamification</li>
                     <li>Networks en cybersecurity</li>
                     <li>AI</li>
-                </ul>
+                </ul></li>
             <li>Softwaremanagement</li>
-            <ul>
+            <li><ul>
                 <li>Business & IT</li>
-            </ul>
-        </ol>
+            </ul></li>
+        </ol></li>
     <li>Bedrijfsmanagement</li>
-        <ol>
+        <li><ol>
             <li>Accountancy-Fiscaliteit</li>
             <li>Automotive management</li>
             <li>Business Management & Entrepreneurship</li>
             <li>Eventmanagement</li>
             <li>Financie- en verzekeringswezen</li>
             <li>Marketing - specialisatie Retail- & storemanagement</li>
-        </ol>
-    </br>
+        </ol></li>
+    <li><br></li>
     <li>Office management</li>
-        <ol>
+        <li><ol>
             <li>Management assistant</li>
             <li>HR officer</li>
             <li>Medical office manager</li>
-        </ol>
+        </ol></li>
 </ul>
 <p>Definitie van Ohm</p>
 <ol>
-    <p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Amp&#232;re en Watt. Ze wordt genoteerd</br>
-        met de griekse hoofdletter Omega (&#8486;). Door een onderdeel met een weerstand van 1 Ohm</br>
-        zal bij een spanning van 1 Volt een stroom van 1 Amp&#232;re vloeien.</p>
+    <li><p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Amp&#232;re en Watt. Ze wordt genoteerd<br>
+        met de griekse hoofdletter Omega (&ohm;). Door een onderdeel met een weerstand van 1 Ohm<br>
+        zal bij een spanning van 1 Volt een stroom van 1 Amp&#232;re vloeien.</p></li>
 </ol>
 <footer>&copy; 2024</footer>
 </body>
