--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h2><a href="labo2/index.html">Labo 2</a></h2>
 <h2><a href="labo3/index.html">Labo 3</a></h2>
 <h2><a href="labo4/index.html">Labo 4</a></h2>
+<h2><a href="labo5/index.html">Labo 5</a></h2>
 </body>
 </html>
