--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h2><a href="labo3/index.html">Labo 3</a></h2>
 <h2><a href="labo4/index.html">Labo 4</a></h2>
 <h2><a href="labo5/index.html">Labo 5</a></h2>
+<h2><a href="labo6/index.html">Labo 6</a></h2>
 </body>
 </html>
