--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <h2><a href="labo4/index.html">Labo 4</a></h2>
 <h2><a href="labo5/index.html">Labo 5</a></h2>
 <h2><a href="labo6/index.html">Labo 6</a></h2>
+<h2><a href="labo7/index.html">Labo 7</a></h2>
 </body>
 </html>
