--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <h2><a href="labo6/index.html">Labo 6</a></h2>
 <h2><a href="labo7/index.html">Labo 7</a></h2>
 <h2><a href="labo8/index.html">Labo 8</a></h2>
+<h2><a href="labo9/index.html">Labo 9</a></h2>
 </body>
 </html>
