--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <h2><a href="labo9/index.html">Labo 9</a></h2>
 <h2><a href="labo10/index.html">Labo 10</a></h2>
 <h2><a href="labo11/index.html">Labo 11</a></h2>
+<h2><a href="labo12/index.html">Labo 12</a></h2>
 </body>
 </html>
