--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
 <h1>Web Development I - Javascript</h1>
 <h2><a href="labo2/index.html">Labo 2</a></h2>
+<h2><a href="labo3/index.html">Labo 3</a></h2>
+<h2><a href="labo4/index.html">Labo 4</a></h2>
 </body>
 </html>
