--- a/labo6/colorPickerUitbreiding/index.html
+++ b/labo6/colorPickerUitbreiding/index.html
@@ -24,10 +24,9 @@
     <label class="kleurLabel">Blue </label>
     <label id="colorBlueValue">128</label>
     <div id="colorBox"></div>
+    <button id="saveButton">Save</button>
     <br>
-    <ul id="colorBoxList">
-
-    </ul>
+    <div id="colorBoxList"></div>
 <script type="text/javascript" charset="utf-8" src="scripts/colorPicker.js"></script>
 </body>
 </html>
