--- a/labo7/BeginSituatie_HitAnObject/index.html
+++ b/labo7/BeginSituatie_HitAnObject/index.html
@@ -6,8 +6,10 @@
     <title>Hit an object</title>
 </head>
 <body>
+<button id="startButton">START</button>
+<p id="score">Aantal hits 0</p>
 <div id="playField">
-    <img src="images/0.png" alt="O" id="foto">
+    <img src="images/0.png" alt="foto" id="target">
 </div>
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
