--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <h2><a href="labo7/index.html">Labo 7</a></h2>
 <h2><a href="labo8/index.html">Labo 8</a></h2>
 <h2><a href="labo9/index.html">Labo 9</a></h2>
+<h2><a href="labo10/index.html">Labo 10 - Start Page</a></h2>
 </body>
 </html>
